Restoration now verifies if backup being restored is older than last back up done - if information is available